# bet-maker

./: Dockerfile  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-03-13_args.py  2024-03-13_create_all_tables.py
db/: 01-init.sh
scripts/: start.sh
src/: .env.example  __init__.py  config.py  docker.env
src/bets/: routers.py  schemas.py  services.py
src/pkgs/db/: engine.py
src/pkgs/db/tables/: __init__.py  base.py  bets.py
tests/: conftest.py
tests/bets/: factories.py  test_routes.py
